src/workspace/snapshots/protols__workspace__rename__test__reference-2.snap
---
source: src/workspace/rename.rs
expression: "state.reference_fields(\"com.workspace\", \"Author.Address\",\nPathBuf::from(\"src/workspace/input\"), None)"
---
- uri: "file://input/a.proto"
  range:
    start:
      line: 12
      character: 3
    end:
      line: 12
      character: 17
