src/workspace/snapshots/protols__workspace__rename__test__reference-3.snap
---
source: src/workspace/rename.rs
expression: "state.reference_fields(\"com.utility\", \"Foobar.Baz\")"
---
- uri: "file://input/a.proto"
  range:
    start:
      line: 10
      character: 3
    end:
      line: 10
      character: 25
