src/workspace/snapshots/protols__workspace__rename__test__reference.snap
---
source: src/workspace/rename.rs
expression: "state.reference_fields(\"com.workspace\", \"Author\",\nPathBuf::from(\"src/workspace/input\"), None)"
---
- uri: "file://input/a.proto"
  range:
    start:
      line: 11
      character: 3
    end:
      line: 11
      character: 9
