src/workspace/snapshots/protols__workspace__rename__test__rename-2.snap
---
source: src/workspace/rename.rs
expression: "state.rename_fields(\"com.workspace\", \"Author.Address\", \"Author.Location\",\nPathBuf::from(\"src/workspace/input\"), None)"
---
"file://input/a.proto":
  - range:
      start:
        line: 12
        character: 3
      end:
        line: 12
        character: 17
    newText: Author.Location
