src/workspace/snapshots/protols__workspace__rename__test__rename-3.snap
---
source: src/workspace/rename.rs
expression: "state.rename_fields(\"com.utility\", \"Foobar.Baz\", \"Foobar.Baaz\",\nPathBuf::from(\"src/workspace/input\"), None)"
---
"file://input/a.proto":
  - range:
      start:
        line: 13
        character: 3
      end:
        line: 13
        character: 25
    newText: com.utility.Foobar.Baaz
