src/workspace/snapshots/protols__workspace__rename__test__rename.snap
---
source: src/workspace/rename.rs
expression: "state.rename_fields(\"com.workspace\", \"Author\", \"Writer\",\nPathBuf::from(\"src/workspace/input\"), None)"
---
"file://input/a.proto":
  - range:
      start:
        line: 11
        character: 3
      end:
        line: 11
        character: 9
    newText: Writer
  - range:
      start:
        line: 12
        character: 3
      end:
        line: 12
        character: 17
    newText: Writer.Address
